# Ezhuthu-Jepa

./: .gitignore  AGENTS.md  CHECKPOINT.md  CLAUDE.md  CODEX.md  README.md  STATUS.md  TASKS.md  pyproject.toml
configs/phase0/: locked-versions.yaml
configs/phase1/: augment.yaml  base_ink_probe.yaml  k2_probe.yaml  pilot.yaml  pretrain.yaml  probe-augmented.yaml  probe.yaml  render.yaml  split.yaml  sweep.yaml
docs/: DECISION_LOG.md  EXPERIMENT_LOG.md  FIGURES.md  FUTURE_WORK.md  GATE_G0_REVIEW.md  GATE_G1_REVIEW.md  GATE_G2_REVIEW.md  GATE_G3_REVIEW.md  GATE_LAUNCH_A_REVIEW.md  REPORT.md  REPRODUCIBILITY.md  RISKS_AND_OPEN_QUESTIONS.md  RUNBOOK.md
docs/decisions/: compute-ledger.md
docs/figures/: f1_seam_localization.prov.json  f2_frequency_distribution.prov.json  f3_probe_accuracy.prov.json
docs/spec/: EZHUTHU_JEPA_Spec_v0.2.md
notes/: integrity-gaps.md  session-log.md  spec-comprehension-check.md  stuck-log.md  subagent-log.md  uncertainties.md  untrusted-results.md
notes/decision-gates/: g1-cheap-baseline.md
notes/negative-results/: k2-base-ink-signal-is-location-not-composition.md  pilot-latent-jepa-underperforms-pixel-baseline.md
notes/schema-audits/: ezhuthu_jepa-config.md  phase1-configs.md  render-config.md
runs/pa001-render-001/: provenance.json  render-manifest.json
tasks/: atomic-task-list.md
tests/: test_augment.py  test_base_ink.py  test_base_to_sign.py  test_config.py  test_figures.py  test_grapheme.py  test_import.py  test_pretrain.py  test_probe.py  test_provenance.py  test_render.py  test_seam_mask.py  test_split.py  test_sweep.py
(+68 files in other folders)
